# EasyDRM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.cache/clangd/index/: main.cpp.977ADEB3000B56FF.idx  mainwindow.cpp.0025B20A4718A039.idx  mainwindow.h.06F12427BC954F3A.idx  model.cpp.281A63345F6E55A8.idx  model.h.0C7E5B8D88566202.idx
src/: appdef.h  decrypt_func.cpp  decrypt_func.h  encrypt_func.cpp  encrypt_func.h  licence_func.cpp  licence_func.h  model.cpp  model.h
src/model/: licence_model.cpp  licence_model.h  model.cpp  model.h
